Made a minor change to my previous fix for gateone.TerminalWebSocket.authenticate() so that TypeErrors are no longer a possibility. Fixed the bug where regular characters were resulting in a KeyError when line drawing mode was enabled on the G0 charset. Added support for the screen alignment test (DECALN) escape sequence (try it: echo -e "\033#8"). Fixed a bug where ssh_connect.py would die if $LINES or $COLUMNS wasn't in os.environ. Updated/fixed support for G0 and G1 charsets.  You can now switch between G0 and G1 (before this you could only change/use G0). At the advice of #python on Freenode I have modified the way termio reads output from terminal programs.  Essentially, it no longer uses bytearrays.  terminal.Terminal.write() has been modified to reflect this change as well. Lots of little tweaks to the terminal emulator (minor fixes here and there).  Examples of what is fixed:  htop's headers are now displayed correctly (with the background color going all the way to the edge of the screen) and you can change the colors of 'top' without having your screen go blank :). A few tweaks here and there in gateone.js to improve situations where a picture is displayed and also to fix a rendering issue on Chrome on Mac OS X. Improvements have been made to the invisible pastearea (that lets you paste into the terminal via the context menu). Removed all the extraneous termios stuff in termio...  It wasn't doing anything anyway.

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -111,6 +111,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     position: absolute;
+/*     top: 0; */
     bottom: 0;
 }
 /* Other text properties */
@@ -254,6 +255,10 @@
     z-index: 500;
     margin: 0;
     opacity: 0;
+}
+/* This is to work around a Chrome/Windows bug where pasting gets disabled if you use JS to set display: none */
+.{{prefix}}none {
+    display: none;
 }
 .{{prefix}}sideinfo {
     -webkit-transform: rotate(90deg);
